k8s/components/ilcc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ilcc
  namespace: hydra-infra
  labels:
    app: ilcc
spec:
  type: ClusterIP
  selector:
    app: ilcc
  ports:
    - name: http
      port: 80
      targetPort: http
